--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=100.64.0.48
-DB_DATABASE=postgres
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_SCHEMA=ai
-DB_TABLES=underutilized_users_ams
+DB_HOST=
+DB_DATABASE=
+DB_USER=
+DB_PASSWORD=
+DB_SCHEMA=
+DB_TABLES=
